--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Karime Lomeli Resume">
+  <meta name="author" content="862334098">
 
-  <title>John Doe - Business Administration</title>
+  <title>Karime Lomeli - Student</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Karime Lomeli</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/KarimeLomeli.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Karime Lomeli
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology📚</div>
+        <p class="lead mb-4">My name is Karime Lomeli and I am a first year full time student at the University of California Riverside. I am currently a Psychology student persuing to become a clinial psychologist spealizing in marriage counseling or children.  <br><br>
 
-        Enter bio here<br><br>
+        I currently have one job as an AVID tutor at my old school, Norte Vista High. I was involved in the AVID program for seven years and maintained a 4.6 throughout the last four years of high school. The position was offered by my AVID coordinator who believed I was passionate and knowledgable to handle this job. I work Tuesday and Thursdays for the entire school day and serve as a mentore for these students. I am able to not nonly tutor these kids but also  inspire them to attend a four year university as that is the overall goal of the program. Overall, I enjoy my job and its made me interested in entering and studying children psychology.    <br><br>
 
-        Enter bio here
+        Although my paying work experience is minimal, I was involved tremedosly throughout my four years of high school. I was roughly involved in 8 clubs on campus and was an alter server for my local church, St. Thomas. With my collctive experience within these clubs, I was able to gain multiple leadership positions such as President of the National Honor Society, Vice President of Jr. Optimist, and Leader of Service Learning/ Rotary Club. With my leadership in Service Learning I was able to create my own project The Helping Hands Pantries. These pantries consisted of over 15 rolling carts loacted around campus with items that students may need throughout the day such as deodorent, chapstick, socks, tissues, notebooks, paper, masks, granola bars, hand sanitizer, toothbrushes, toothpaste, and feminie products. My supervisor and I were the only ones who completeky involved in this project and I had minimal to no help building, restocking, and planning my project. I would say that this experience overall prepared me enough for the work filed and I feel very confident in my work ethic. I am very passionate so it is difficult for mw to give up on something because I am determined to complete it even if its not the best or advanced as my peers. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/sanrio/?hl=en">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/klome009">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://github.com/klome009">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:Karime.Lomeli2003@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,53 +92,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">AVID Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.avid.org/">AVID</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Motivate students to a University <br> 
+              • Help them with homework <br>
+              • Serve as a mentor<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">November 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">National Honors Socity President</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.nhs.us/">National Honors Society</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for keeping the club in tact <br>
+              • Leading projects and assigning tasks<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">November 2018 - May 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Rotary</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.rotary.org/en">Rotary International</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Created Rolling Carts <br>
+            • Lead Projects<br>
+            • Lead new memembers<br>
+            • Main Leader <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
-          </div>
-        </div>
-
-
-
+            <span class="text-primary">Novemver 2019 - May 2022</span>
+          </div>     </div>
       </div>
 
     </section>
@@ -152,54 +148,45 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Psychology</div>
+            <div>Clinical Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2022 - June 2026</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Postgraduate Certificate in Psychology</div>
+            <div>Clinical Psychology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Psychology</div>
+            <div>Clinical Studies</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
+            <span class="text-primary">September 2022 - June 2026 </span>
+          </div>     </div>
       </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
-      <div class="w-100">
-        <h2 class="mb-5">Portfolio</h1>
-        <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
-      </div>
-    </section>
-
+      </section> <h2 class="mb-5">Portfolio</h1>
+     <center>
+    <img src="img/karime1.jpg" width="500px">
+    <img src="img/karime2.jpg" width="500px"><br>
+    <img src="img/karime3.jpg" width="500px">
+    <img src="img/karime4.jpg" width="500px"><br> </center>
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Karime Lomeli</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
